chore(books): files of the end of week